feat: Refactor database setup process and update Cloudinary service to ES6 modules

--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "migrate:multi-event": "node src/migrations/run-multi-event-migration.js",
     "seed": "node src/seeders/index.js",
     "seed:multi-event": "node src/seeders/multiEventSeeder.js",
-    "db:setup": "node src/migrations/run-all-migrations.js && node src/seeders/index.js && node src/seeders/simpleMultiEventSeeder.js",
+    "db:setup": "node src/scripts/setup-database.js",
+    "db:setup:quick": "node src/migrations/run-all-migrations.js && node src/seeders/index.js && node src/seeders/simpleMultiEventSeeder.js",
     "db:destroy": "node -e \"import('pg').then(async ({default: pg}) => { const connString = (await import('fs')).default.readFileSync('.env', 'utf8').match(/NEON_DATABASE_URL=(.+)/)[1]; const client = new pg.Client(connString); await client.connect(); await client.query('DROP SCHEMA public CASCADE'); await client.query('CREATE SCHEMA public'); await client.query('GRANT ALL ON SCHEMA public TO PUBLIC'); console.log('✅ Database destroyed and reset'); await client.end(); })\"",
     "setup": "npm run migrate && npm run migrate:multi-event && npm run seed && node src/migrations/check-status.js",
     "setup:fresh": "npm run migrate:rollback && npm run migrate && npm run migrate:multi-event && npm run seed && node src/migrations/check-status.js",
