feat: Implement school management features and remove requires_approval field from events

--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon src/index.js",
     "migrate": "node src/migrations/run-migration.js",
     "migrate:all": "node src/migrations/run-all-migrations.js",
+    "migrate:010": "node src/migrations/run-010-migration.js",
     "migrate:rollback": "node src/migrations/rollback-database.js",
+    "migrate:rollback:010": "node src/migrations/rollback-010-migration.js",
     "migrate:verify": "node src/migrations/verify-schema.js",
     "migrate:multi-event": "node src/migrations/run-multi-event-migration.js",
     "seed": "node src/seeders/index.js",
