feat: Implement bulk registration service with validation, rate limiting, and event eligibility checks
test: Add comprehensive integration tests for bulk registration functionality

test: Create ranking visibility test suite for admin and public access scenarios

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,11 @@ tmp/
 temp/
 *.tmp
 
+# Development scripts (not for production)
+scripts-dev/
+*.xlsx
+*.xls
+
 # Deployment - exclude from production
 # server/src/tests/
 # server/src/seeders/
