--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "migrate": "node src/migrations/run-migration.js",
     "migrate:all": "node src/migrations/run-all-migrations.js",
     "migrate:010": "node src/migrations/run-010-migration.js",
+    "migrate:011": "node src/migrations/run-011-migration.js",
+    "migrate:012": "node src/migrations/run-012-migration.js",
     "migrate:rollback": "node src/migrations/rollback-database.js",
     "migrate:rollback:010": "node src/migrations/rollback-010-migration.js",
     "migrate:verify": "node src/migrations/verify-schema.js",
@@ -20,17 +22,19 @@
     "db:setup": "node src/scripts/setup-database.js",
     "db:setup:quick": "node src/migrations/run-all-migrations.js && node src/seeders/index.js && node src/seeders/simpleMultiEventSeeder.js",
     "db:destroy": "node -e \"import('pg').then(async ({default: pg}) => { const connString = (await import('fs')).default.readFileSync('.env', 'utf8').match(/NEON_DATABASE_URL=(.+)/)[1]; const client = new pg.Client(connString); await client.connect(); await client.query('DROP SCHEMA public CASCADE'); await client.query('CREATE SCHEMA public'); await client.query('GRANT ALL ON SCHEMA public TO PUBLIC'); console.log('✅ Database destroyed and reset'); await client.end(); })\"",
-    "setup": "npm run migrate && npm run migrate:multi-event && npm run migrate:010 && npm run seed && node src/migrations/check-status.js",
-    "setup:fresh": "npm run migrate:rollback && npm run migrate && npm run migrate:multi-event && npm run migrate:010 && npm run seed && node src/migrations/check-status.js",
+    "setup": "npm run migrate && npm run migrate:multi-event && npm run migrate:010 && npm run migrate:011 && npm run migrate:012 && npm run seed && node src/migrations/check-status.js",
+    "setup:fresh": "npm run migrate:rollback && npm run migrate && npm run migrate:multi-event && npm run migrate:010 && npm run migrate:011 && npm run migrate:012 && npm run seed && node src/migrations/check-status.js",
     "setup:multi-event": "npm run migrate:multi-event && npm run seed:multi-event && node src/migrations/check-status.js",
     "setup:multi-event:fresh": "npm run migrate:multi-event && npm run seed && npm run seed:multi-event && node src/migrations/check-status.js",
     "test": "jest --coverage",
     "test:unit": "node src/tests/unit/qr-service.test.js",
     "test:visual": "node src/tests/integration/qr-visual-test.js",
+    "test:bulk-registration": "node src/tests/integration/bulk-registration.test.js",
     "test:compare": "node src/tests/helpers/token-comparison.js",
     "test:uniqueness": "node src/tests/helpers/token-uniqueness.js",
     "test:scan": "node src/tests/helpers/qr-scan-validator.js",
     "test:all": "npm run test:unit && npm run test:compare && npm run test:uniqueness",
+    "test:ranking": "node src/tests/ranking-visibility-test.js",
     "qr:regenerate": "node src/scripts/regenerate-qr-tokens.js",
     "qr:warm-cache": "node src/utils/warm-qr-cache.js"
   },
