feat(migrations): add refund configuration fields to events table
- Created migration script to add cancellation_deadline_hours, refund_tiers, cancellation_reason, and cancelled_at columns to the events table.
- Implemented index on cancelled_at for improved query performance.
- Added rollback migration to remove the newly added fields.

feat(waitlist): implement automatic promotion from waitlist

- Developed promoteFromWaitlist function to handle automatic promotion of students from waitlist to confirmed status based on available spots.
- Ensured proper handling of registration types and payment statuses during promotion.

test(integration): add tests for deregistration and refund system

- Implemented comprehensive test suite for deregistration flows, refund calculations, and waitlist promotion.
- Included tests for various refund scenarios and ensured proper database state before and after tests.

test(integration): add tests for event manager cancellation routes

- Created test suite for event manager's ability to cancel registrations, both single and bulk.
- Included ownership validation and waitlist promotion tests after cancellations.

feat(utils): add refund calculator utility

- Developed refund calculator to determine refund eligibility and amount based on event refund policy.
- Included validation for refund tiers configuration to ensure correct setup.

--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,14 @@
     "migrate:010": "node src/migrations/run-010-migration.js",
     "migrate:011": "node src/migrations/run-011-migration.js",
     "migrate:012": "node src/migrations/run-012-migration.js",
+    "migrate:014": "node src/migrations/run-014-migration.js",
     "migrate:rollback": "node src/migrations/rollback-database.js",
     "migrate:rollback:010": "node src/migrations/rollback-010-migration.js",
     "migrate:verify": "node src/migrations/verify-schema.js",
     "migrate:multi-event": "node src/migrations/run-multi-event-migration.js",
     "seed": "node src/seeders/index.js",
     "seed:multi-event": "node src/seeders/multiEventSeeder.js",
-    "db:setup": "node src/scripts/setup-database.js",
+    "db:setup": "npm run migrate:all && npm run seed && node src/seeders/simpleMultiEventSeeder.js",
     "db:setup:quick": "node src/migrations/run-all-migrations.js && node src/seeders/index.js && node src/seeders/simpleMultiEventSeeder.js",
     "db:destroy": "node -e \"import('pg').then(async ({default: pg}) => { const connString = (await import('fs')).default.readFileSync('.env', 'utf8').match(/NEON_DATABASE_URL=(.+)/)[1]; const client = new pg.Client(connString); await client.connect(); await client.query('DROP SCHEMA public CASCADE'); await client.query('CREATE SCHEMA public'); await client.query('GRANT ALL ON SCHEMA public TO PUBLIC'); console.log('✅ Database destroyed and reset'); await client.end(); })\"",
     "setup": "npm run migrate && npm run migrate:multi-event && npm run migrate:010 && npm run migrate:011 && npm run migrate:012 && npm run seed && node src/migrations/check-status.js",
@@ -30,6 +31,8 @@
     "test:unit": "node src/tests/unit/qr-service.test.js",
     "test:visual": "node src/tests/integration/qr-visual-test.js",
     "test:bulk-registration": "node src/tests/integration/bulk-registration.test.js",
+    "test:deregistration": "node src/tests/integration/deregistration-refund.test.js",
+    "test:event-manager-cancel": "node src/tests/integration/event-manager-cancellation.test.js",
     "test:compare": "node src/tests/helpers/token-comparison.js",
     "test:uniqueness": "node src/tests/helpers/token-uniqueness.js",
     "test:scan": "node src/tests/helpers/qr-scan-validator.js",
