make excel file visible for testing in different environment

--- a/.gitignore
+++ b/.gitignore
@@ -90,9 +90,9 @@ temp/
 *.tmp
 
 # Development scripts (not for production)
-scripts-dev/
-*.xlsx
-*.xls
+# scripts-dev/
+# *.xlsx
+# *.xls
 
 # Deployment - exclude from production
 # server/src/tests/
